--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,8 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="#">Products</a>
                     <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Connexion</a>
+                    <a class="nav-link" href="#">Inscription</a>
                 </div>
             </div>
         </div>
