--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,11 +20,65 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Products</a>
-                    <a class="nav-link" href="#">Pricing</a>
-                    <a class="nav-link" href="#">Connexion</a>
-                    <a class="nav-link" href="#">Inscription</a>
+                    <li class="nav-item">
+                        <a
+                          class="nav-link active text-white"
+                          aria-current="page"
+                          href="{{ path('app_home') }}"
+                          >Accueil</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a
+                          class="nav-link active text-white"
+                          aria-current="page"
+                          href="{{ path('app_home') }}"
+                          >Produits</a
+                        >
+                    </li>
+                    {% if (app.user) %}
+                    <li class="nav-item">
+                        <a
+                          class="nav-link active text-white"
+                          aria-current="page"
+                          href="{{ path('app_home') }}"
+                          >Mon profil</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a
+                          class="nav-link active text-white"
+                          aria-current="page"
+                          href="{{ path('app_home') }}"
+                          >Ajout d'idées</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a
+                          class="nav-link active text-white"
+                          aria-current="page"
+                          href="{{ path('app_logout') }}"
+                          >Déconnexion</a
+                        >
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a
+                          class="nav-link active text-white"
+                          aria-current="page"
+                          href="{{ path('app_register') }}"
+                          >Inscription</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a
+                          class="nav-link active text-white"
+                          aria-current="page"
+                          href="{{ path('app_login') }}"
+                          >Connexion</a
+                        >
+                    </li>
+                    {% endif %}
                 </div>
             </div>
         </div>
