Mailjet installation and creation of a contact form

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -79,6 +79,14 @@
                         >
                     </li>
                     {% endif %}
+                    <li class="nav-item">
+                        <a
+                          class="nav-link active text-white"
+                          aria-current="page"
+                          href="{{ path('app_contact') }}"
+                          >Contact</a
+                        >
+                    </li>
                 </div>
             </div>
         </div>
