homepage is dynamic and details page is created

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,4 +26,7 @@ footer {
     background-color: rgb(33,37,41);
     padding: 2em;
     color: white;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
