--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
 <header class="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Vinyl Project</a>
+            <a class="navbar-brand" href="{{ path('app_home') }}">Vinyl Project</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,7 +32,7 @@
                         <a
                           class="nav-link active text-white"
                           aria-current="page"
-                          href="{{ path('app_home') }}"
+                          href="{{ path('app_list') }}"
                           >Produits</a
                         >
                     </li>
