Add of account controller

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Vinyl{% endblock %}
 
 {% block main %}
     <h1>The Vinyl Project</h1>
