--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,12 +36,20 @@
                           >Produits</a
                         >
                     </li>
+                    <li class="nav-item">
+                        <a
+                          class="nav-link active text-white"
+                          aria-current="page"
+                          href="{{ path('app_contact') }}"
+                          >Contact</a
+                        >
+                    </li>
                     {% if (app.user) %}
                     <li class="nav-item">
                         <a
                           class="nav-link active text-white"
                           aria-current="page"
-                          href="{{ path('app_home') }}"
+                          href="{{ path('app_account') }}"
                           >Mon profil</a
                         >
                     </li>
@@ -71,14 +79,6 @@
                         >
                     </li>
                     {% endif %}
-                    <li class="nav-item">
-                        <a
-                          class="nav-link active text-white"
-                          aria-current="page"
-                          href="{{ path('app_contact') }}"
-                          >Contact</a
-                        >
-                    </li>
                 </div>
             </div>
         </div>
