--- a/templates/product/details.html.twig
+++ b/templates/product/details.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Details products{% endblock %}
+
 {% block main %}
     <div class="container">
         <div class="row">
