Update twig templates of products

--- a/templates/product/details.html.twig
+++ b/templates/product/details.html.twig
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="row">
             <div class="col cover">
-                <img src="{{ product.cover }}" class="img-fluid" alt="...">
+                <img src="/uploads/{{ product.cover }}" class="card-img-top" alt="{{ product.albumName }}">
             </div>
             <div class="col">
                 <h1>{{ product.albumName }}</h1>
