--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -43,7 +43,7 @@
             {% for product in products %}
             <div class="col">
                 <div class="card">
-                    <img src="{{ product.cover }}" class="card-img-top" alt="...">
+                    <img src="/uploads/{{ product.cover }}" class="card-img-top" alt="{{ product.albumName }}">
                     <div class="card-body">
                         <h5 class="card-title">{{ product.albumName }}</h5>
                         <p>{{ product.country }}, {{ product.price }}€</p>
