--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -26,7 +26,19 @@
                 <img src="{{ product.product.cover }}" alt="" height="75px">
             </th>
             <td>{{ product.product.albumName }}</td>
-            <td>x {{ product.quantity }}</td>
+            <td>
+                <a href="{{ path('app_decrease_cart', {'id': product.product.id}) }}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash" viewBox="0 0 16 16">
+                        <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+                    </svg>
+                </a>
+                x{{ product.quantity }}
+                <a href="{{ path('app_add_cart', {'id': product.product.id}) }}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                    </svg>
+                </a>
+            </td>
             <td>{{ product.product.price }} €</td>
             <td>{{  product.product.price * product.quantity }}</td>
             <td>
