--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -4,5 +4,7 @@
 
 {% block main %}
 
+<h1>Modifier mon mot de passe</h1>
 
+<a href="{{ path('app_account') }}">Retourner sur mon profil</a>
 {% endblock %}
