--- a/templates/account/informations.html.twig
+++ b/templates/account/informations.html.twig
@@ -8,5 +8,5 @@
 <p>Nom : {{ app.user.lastname }}</p>
 <p>Adresse email : {{ app.user.email }}</p>
 
-
+<a href="{{ path('app_account') }}">Retourner sur mon profil</a>
 {% endblock %}
