--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -7,4 +7,8 @@
 <h1>Modifier mon mot de passe</h1>
 
 <a href="{{ path('app_account') }}">Retourner sur mon profil</a>
+
+    <div>
+        {{ form(viewForm) }}
+    </div>
 {% endblock %}
