--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,6 +57,14 @@
                         <a
                           class="nav-link active text-white"
                           aria-current="page"
+                          href="{{ path('app_cart') }}"
+                          >Mon panier</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a
+                          class="nav-link active text-white"
+                          aria-current="page"
                           href="{{ path('app_logout') }}"
                           >Déconnexion</a
                         >
