--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -13,17 +13,15 @@ main %}
           >Ajouter une adresse</a
         >
         {% else %} {% set formHtml %}
-        {{ form(form) }}
+        {{ form_start(form, {action:path('app_order_summary')}) }}
+        {{ form_end(form)}}
         {% endset %} {{ formHtml|replace({'[br]' : '<br />'})|raw }} {% endif %}
-        <p>Choisir mon transporteur</p>
       </div>
     </div>
     <div class="col-md-6">
-      <p>Récapitulatif de ma commande</p>
-      <p>Retrouvez le récapitulatif de vos produits</p>
-    </div>
-    <div class="order-summary">
-      {# {% for key, product in cart %}
+        <p>Retrouvez le récapitulatif de vos produits</p>
+      <div class="order-summary">
+      {% for key, product in cart %}
       <div class="row text-center{% if key > 0 %}mt-2{% endif %}">
         <div class="col mb-3 my-auto">
           <img
@@ -35,14 +33,12 @@ main %}
         <div class="col mb-3 my-auto">x {{ product.quantity }}</div>
         <div class="col mb-3 my-auto">{{ product.product.albumName }}</div>
       </div>
-      {% endfor %} #}
+      {% endfor %}
     </div>
+
+    </div>
+    
   </div>
 </div>
-{#
-<div class="col">
-  {{ form_start(form) }}
-  {{ form_widget(form) }}
-  {{ form_end(form) }}
-</div>
-#} {% endblock %}
+<a href="{{ path('app_cart') }}">Retourner sur mon panier</a>
+ {% endblock %}
