--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -30,6 +30,10 @@
             </label>
         </div>
 
+    <div>
+        <a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a>
+    </div>
+
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
