Update price of products in twig vue

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -39,8 +39,8 @@
                     </svg>
                 </a>
             </td>
-            <td>{{ product.product.price }} €</td>
-            <td>{{  product.product.price * product.quantity }}</td>
+            <td>{{ (product.product.price / 100) |number_format(2, ',', '.')}} €</td>
+            <td>{{ (product.product.price * product.quantity / 100) |number_format(2, ',', '.') }}</td>
             <td>
                 <a href="{{ path('app_delete_cart', {'id': product.product.id}) }}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
@@ -58,7 +58,7 @@
     </table>
     <div>
         <b>Nombre de produit :</b> {{ cart | length }} <br>
-        <b>Total :</b> {{ total }}€ <br>
+        <b>Total :</b> {{ (total / 100) |number_format(2, ',', '.') }}€ <br>
         <a href="{{ path(('app_order')) }}" class="btn btn-success">Valider mon panier</a>
     </div>
         {% else %}
