--- a/templates/product/details.html.twig
+++ b/templates/product/details.html.twig
@@ -10,7 +10,7 @@
             </div>
             <div class="col">
                 <h1>{{ product.albumName }}</h1>
-                <h3>{{ product.price }}€</h3>
+                <h3>{{ (product.price / 100) |number_format(2, ',', '.') }}€</h3>
                 <a href="{{  path('app_add_cart', {'id': product.id}) }}" type="button" class="btn btn-primary">Ajouter au panier</a>
             </div>
         </div>
