--- a/templates/product/list.html.twig
+++ b/templates/product/list.html.twig
@@ -14,7 +14,7 @@
       }}</a>
       <h5>{{ product.author }}</h5>
       <img src="{{ asset('uploads/') }}{{ product.cover }}" class="card-img-top" alt="{{ product.albumName }}">
-      <p>{{ product.price }}</p>
+      <p>{{ (product.price / 100) |number_format(2, ',', '.') }} €</p>
     </div>
     {% endfor %}
   </div>
