--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,18 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #121E26;
+    color: white;
+    height: 100vh;
+    align-content: center;
+}
+
+.card {
+    color: black;
+}
+
+.v {
+    color: #f29D35;
 }
 
 h1 {
@@ -15,7 +27,8 @@ h1 {
 
 .button {
     text-align: center;
-    padding: 3em;
+    padding: 2em;
+    margin: 3em;
 }
 
 h2 {
@@ -26,4 +39,23 @@ footer {
     background-color: rgb(33,37,41);
     padding: 2em;
     color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+}
+
+.details {
+    margin: 2em;
+    height: 100%;
+    align-content: center;
+}
+
+.titleDetails {
+    padding: 0;
+}
+
+.albumDetails {
+    text-align: center;
+    padding: 2em;
 }
