--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -86,7 +86,7 @@
                           >Connexion</a
                         >
                     </li>
-                        <li class="nav-item">
+                        <li class="nav-item justify-content-end">
                             <a
                                     class="nav-link active text-white"
                                     aria-current="page"
