--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -6,7 +6,7 @@
     <h1>Mon panier</h1>
 
     {% if cart | length > 0%}
-    <table class="table">
+    <table class="table table-dark">
         <thead>
         <tr>
             <th scope="col">Produit</th>
@@ -23,7 +23,7 @@
         <tr>
 
             <th scope="row">
-                <img src="{{ product.product.cover }}" alt="" height="75px">
+                <img src="{{ asset('uploads/') }}{{ product.product.cover }}" alt="" height="75px">
             </th>
             <td>{{ product.product.albumName }}</td>
             <td>
