--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -1,6 +1,10 @@
-{% extends 'base.html.twig' %} {% block title %}Order{% endblock %} {% block
-main %}
+{% extends 'base.html.twig' %}
+{% form_theme form 'bootstrap_5_layout.html.twig' %}
 
+{% block title %}Order{% endblock %}
+
+
+{% block main %}
 <div class="container">
   <h1>Passer commande</h1>
   <div class="row">
@@ -19,7 +23,7 @@ main %}
       </div>
     </div>
     <div class="col-md-6">
-        <p>Retrouvez le récapitulatif de vos produits</p>
+        <h5>Retrouvez le récapitulatif de vos produits</h5>
       <div class="order-summary">
       {% for key, product in cart %}
       <div class="row text-center{% if key > 0 %}mt-2{% endif %}">
