--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -7,17 +7,16 @@
     {% for flash_error in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-    <h1>Reset your password</h1>
+    <h1>Mot de passe oublié</h1>
 
     {{ form_start(requestForm) }}
         {{ form_row(requestForm.email) }}
         <div>
             <small>
-                Enter your email address and we will send you a
-                link to reset your password.
+                Entrez votre adresse e-mail et nous vous enverrons un lien pour changer votre mot de passe.
             </small>
         </div>
 
-        <button class="btn btn-primary">Send password reset email</button>
+        <button class="btn btn-primary">Evoyer e-mail</button>
     {{ form_end(requestForm) }}
 {% endblock %}
