Add of Stripe Controller

--- a/templates/order/order_summary.html.twig
+++ b/templates/order/order_summary.html.twig
@@ -14,8 +14,8 @@
             Mon Transporteur:
 
                 <div>
-                    <p>{{ order.carrierName }}</p>
-                    <p>{{ (order.carrierPrice / 100) |number_format(2, ',', '.') }}€</p>
+                    <p>{{ carrier.name }}</p>
+                    <p>{{ (carrier.price / 100) |number_format(2, ',', '.') }}€</p>
                 </div>
 
         </div>
@@ -27,7 +27,7 @@
 
             {% for p in cart %}
                 {% set sousTotal =  sousTotal + (p.product.price * p.quantity) %}
-                {% set total = sousTotal + order.carrierPrice %}
+                {% set total = sousTotal + carrier.price %}
             <div class="row">
                 <div class="col"><img src="{{ asset('uploads/') }}{{ p.product.cover }}" alt="album cover" height="75px"></div>
                 <div class="col"><strong>{{ p.product.albumName }}</strong> de {{ p.product.author }}</div>
@@ -37,38 +37,43 @@
             {% endfor %}
             <div class="row">
                 <p><strong>Sous total:</strong> {{ (sousTotal / 100) |number_format(2, ',', '.') }}€</p>
-                <p><strong>Livraison:</strong>{{ (order.carrierPrice / 100) |number_format(2, ',', '.') }}€</p>
+                <p><strong>Livraison:</strong>{{ (carrier.price / 100) |number_format(2, ',', '.') }}€</p>
                 <p><strong>Total:</strong>{{ (total/100) |number_format(2, ',', '.') }}€</p>
             </div>
-            <a href="" class="btn btn-success">Payer {{ (total / 100) |number_format(2, ',', '.') }}€</a>
+            <a class="btn btn-success" id="checkout-button">Payer {{ (total / 100) |number_format(2, ',', '.') }}€</a>
         </div>
     </div>
 
 {% endblock %}
-
 
 {% block script %}
     <script type="text/javascript">
         var stripe = Stripe('pk_test_51K6F9OItVNcg60jK9EJOM2Gb0m9Dv6FJ21Mcpy5FeQwf1ANBqcuFue8gDRi8jNeyFqlM7RtDxOBVz3rg5ixuqlZ000mBqt6yDY');
         var checkoutButton = document.getElementById("checkout-button");
         checkoutButton.addEventListener("click", function () {
-            fetch("/commande/create-session", {
+            fetch("/stripe", {
                 method: "POST",
             })
-                .then(function(response) {
-                    return response.json();
-                })
-                .then(function(session) {
-                        return stripe.redirectToCheckout({ sessionId: session.id });
-                })
-                .then(function(result) {
-                    if (result.error) {
-                        alert(result.error.message);
-                    }
-                })
-                .catch(function (error) {
-                    console.log("Error:", error);
-                });
+            .then(function(response) {
+                return response.json();
+            })
+            .then(function(session) {
+                if (session.error == 'app_order') {
+                    window.location.replace('{{ path('app_order') }}');
+                } else {
+                    return stripe.redirectToCheckout({ sessionId: session.id });
+                }
+            })
+            .then(function(result) {
+
+                if (result.error) {
+                    alert(result.error.message);
+                }
+            })
+            
+            .catch(function (error) {
+                console.log("Error:", error);
+            });
 
         });
     </script>
