--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -10,14 +10,10 @@
 {% endfor %}
 
 <div class="row">
-    <div class="col-md-8">
+    <div class="col">
         {{ form_start(form) }}
         {{ form_widget(form) }}
         {{ form_end(form) }}
-    </div>
-    <div class="col-md-4 pl-5">
-        <h3>Vinyl</h3>
-        <hr>
     </div>
 </div>
 </div>
