--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -105,7 +105,7 @@
     </nav>
 </header>
 
-<div class="container">
+<div class="container main">
     {% block main %}
     {% endblock %}
 </div class="container">
