--- a/templates/product/list.html.twig
+++ b/templates/product/list.html.twig
@@ -5,7 +5,7 @@
 {% block main %}
 
 <h1>Tous nos vinyles à la vente</h1>
-<div class="container">
+<div class="container list">
   <p>Trier par : <a href="{{ path('app_list_asc') }}">Prix croissant</a> <a href="{{ path('app_list_desc') }}">Prix décroissant</a></p>
     <div class="row row-cols-1 row-cols-md-4 g-4">
     {% for product in products %}
