--- a/templates/order_success/index.html.twig
+++ b/templates/order_success/index.html.twig
@@ -1,20 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello OrderSuccessController!{% endblock %}
+{% block title %}Order Success{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block main %}
+<h1> Commande payée!</h1>
+<p>Votre commande a bien été payée ! merci </p>
+<p>Récapitulatif : </p>
+<p>N° référence : {{ order.reference }}</p>
+<p>Adresse de livraison : {{ order.delivery|raw }}</p>
+<p>Transporteur : {{ order.carrierName }}</p>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/MAMP/htdocs/Vinyl_Stripe/Vinyl/src/Controller/OrderSuccessController.php'|file_link(0) }}">src/Controller/OrderSuccessController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/MAMP/htdocs/Vinyl_Stripe/Vinyl/templates/order_success/index.html.twig'|file_link(0) }}">templates/order_success/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
