phone and zip code limit

--- a/templates/account/address.html.twig
+++ b/templates/account/address.html.twig
@@ -1,5 +1,8 @@
-{% extends 'base.html.twig' %} {% block title %}Adress{% endblock %} {% block
-main %}
+{% extends 'base.html.twig' %}
+
+{% block title %}Adress{% endblock %}
+
+{% block main %}
 <h1>Toutes mes adresses</h1>
 <p>Liste des adresses de votre compte</p>
 <hr />
