images added in home

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -14,13 +14,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="{{ asset('img/vinyl.png') }}" class="d-block w-100" alt="...">
+                    <img src="{{ asset('img/4jpg.jpg') }}" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="{{ asset('img/vinyl.png') }}" class="d-block w-100" alt="...">
+                    <img src="{{ asset('img/3.jpg') }}" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="{{ asset('img/vinyl.png') }}" class="d-block w-100" alt="...">
+                    <img src="{{ asset('img/5.jpg') }}" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
