--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Account{% endblock %}
+{% block title %}Mon profil{% endblock %}
 
 {% block main %}
 <h1>Bienvenue sur votre compte {{ app.user.firstname }} !</h1>
