--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -8,18 +8,25 @@
             {% if products | length == 0 %}
                 <h4>Aucun résulat pour votre recherche.</h4>
             {% else %}
-                <h3 class="mt-3">Vos résulats de recherche :</h3>
-                {% for p in products %}
-                    <div class="mt-3 p-3 bg-light border rounded">
-                        <a href="{{ path('app_details' , {'id': p.id }) }}">
-                            <img src="{{ asset('uploads/') }}{{ p.cover }}" alt="">
-                            <h6 class="text-dark"><i class="bi bi-arrow-down-right-square-fill text-primary"></i> {{ p.albumName }}</h6>
-                            <div class="text-dark small p-1 rounded">
-                               {{ p.author }}
+                <div class="row row-cols-1 row-cols-md-4 g-4">
+                    {% for product in products %}
+                        <div class="col">
+                            <div class="card">
+                                <img src="{{ asset('uploads/') }}{{ product.cover }}" class="card-img-top" alt="{{ product.albumName }}">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ product.albumName }}</h5>
+                                    <p>{{ product.country }}, {{ (product.price /100) |number_format(2, ',', '.')  }}€</p>
+                                    <p>Genre: {{ product.genre.name }}</p>
+                                    {% if product.description %}
+                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                    {% endif %}
+                                    <a href="{{ path('app_details', {'id': product.id }) }}">Détails</a>
+                                    <a href="{{  path('app_add_cart', {'id': product.id}) }}" type="button" class="btn btn-primary btn-sm">Ajouter au panier</a>
+                                </div>
                             </div>
-                        </a>
-                    </div>
-                {% endfor %}
+                        </div>
+                    {% endfor %}
+                </div>
             {% endif %}
         </div>
     {% endif %}
