--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -8,7 +8,7 @@
             {% if products | length == 0 %}
                 <h4>Aucun résulat pour votre recherche.</h4>
             {% else %}
-                <div class="row row-cols-1 row-cols-md-4 g-4">
+                <div class="row row-cols row-cols-md-2 g-4">
                     {% for product in products %}
                         <div class="col">
                             <div class="card">
